package com.company;

public class ExceptionCarga extends Exception{
    public ExceptionCarga(String message) {
        super(message);
    }
}
